--- a/css/style.css
+++ b/css/style.css
@@ -124,4 +124,40 @@ body {
 .post-tags p {
   margin: 0 10px 0 0;
 }
+
+/* Tags cloud */
+.tag-size-1 {
+  font-size: 16px;
+}
+
+.tag-size-2 {
+  font-size: 20px;
+}
+
+.tag-size-3 {
+  font-size: 24px;
+}
+
+.tag-size-4 {
+  font-size: 28px;
+}
+
+.tag-size-5 {
+  font-size: 30px;
+}
+
+.tags {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.tags li {
+  margin: 5px;
+}
+
+.tags li a {
+  text-decoration: none;
+}
 /*# sourceMappingURL=style.css.map */
